--- a/css/offer.css
+++ b/css/offer.css
@@ -98,11 +98,14 @@ html, body {
 }
 .circleCat{
 	width: 77%;
-	height: 63%;
+	height: 72%;
 	background-color: red;
 	border: solid 3px white;
 	border-radius: 65%;
 	margin: 0 auto;
+	background-position: center;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
 }
 .titleCat
 {
