--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 
 <div class="main-menu-container "></div>
 <div class="clear"></div>
-
+<!--<div class="spin"><i class="fa fa-spinner fa-spin"></i></div>-->
 <div class="page "></div>
 
 <div class="page_right ">
