--- a/css/offer.css
+++ b/css/offer.css
@@ -99,8 +99,8 @@ html, body {
 .circleCat{
 	width: 77%;
 	height: 72%;
-	background-color: red;
-	border: solid 3px white;
+	/* background-color: red; */
+	/* border: solid 3px white; */
 	border-radius: 65%;
 	margin: 0 auto;
 	background-position: center;
@@ -410,4 +410,12 @@ html, body {
 .flipContainer
 {
 	margin-bottom: 2%;
+}
+.spin{
+	width: 100%;
+	height: 100%;
+	color: white;
+	font-size: 200px;
+	text-align: center;
+	position: fixed;
 }
