--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 @import url("bootstrap.min.css");
 @import url("font-awesome/css/font-awesome.min.css");
 @import url("offer.css");
+@import url("jquery.mobile-1.4.3.min.css");
 @import url("jquery.mobile.flip.css");
 
 
