--- a/templates/cliente/cliente.html
+++ b/templates/cliente/cliente.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class ="statusbar">
 		<div id = "centrador">
-			<div class = "fav"><i class="fa fa-share-alt"></i></div>
-			<div class = "comp"><i class="fa fa-star"></i></div>
+			<div class = "comp"><i class="fa fa-share-alt"></i></div>
+			<div class = "fav"><i class="fa fa-star"></i></div>
 			<div class = "horario"><i class="fa fa-dot-circle-o switch"></i><%= horarioCli %></div>
 		</div>
 	</div>
