--- a/templates/header/menu.html
+++ b/templates/header/menu.html
@@ -18,9 +18,9 @@
 			</ul>
 			<form class="navbar-form navbar-left" role="search">
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search">
+					<input type="text" class="form-control" placeholder="Negocio">
 				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
+				<button type="submit" class="btn btn-default">Buscar</button>
 			</form>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
