--- a/templates/ofertas/ofertas.html
+++ b/templates/ofertas/ofertas.html
@@ -1,6 +1,6 @@
 <script id="oferta" type="text/template">
 	<!--<div class ="ofertaImg"></div>-->
-	<div id="flipRoot" data-role="flip"></div>
+	<!--<div id="flipRoot" data-role="flip"></div>-->
 	<div class ="statusbar">
 		<div id = "centrador">
 			<div class = "comp"><i class="fa fa-share-alt"></i></div>
