--- a/templates/ofertas/ofertas.html
+++ b/templates/ofertas/ofertas.html
@@ -4,6 +4,7 @@
 	<div class ="statusbar">
 		<div id = "centrador">
 			<div class = "comp"><i class="fa fa-share-alt"></i></div>
+			<div class = "backCli"><i class="fa fa-suitcase"></i></div>
 			<div class = "horario"><i class="fa fa-dot-circle-o switch"></i> <%= horarioCli %></div>
 		</div>
 	</div>
